samples/bad/bad029.lat
// Using variable declared in if block

int main () {
 if(true) {
    int x;
 }
 x = 10;
 return 0 ;
}